--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,7 +1,101 @@
 <!DOCTYPE web-app PUBLIC
- "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
- "http://java.sun.com/dtd/web-app_2_3.dtd" >
+        "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
+        "http://java.sun.com/dtd/web-app_2_3.dtd" >
 
 <web-app>
   <display-name>Archetype Created Web Application</display-name>
+
+  <welcome-file-list>
+    <welcome-file>index.xhtml</welcome-file>
+  </welcome-file-list>
+
+
 </web-app>
+
+        <!--
+                <?xml version="1.0" encoding="UTF-8"?>
+        <web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee"
+                 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+                 xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
+                 version="3.1">
+        <servlet>
+          <servlet-name>Faces Servlet</servlet-name>
+          <servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
+          <load-on-startup>1</load-on-startup>
+        </servlet>
+        <welcome-file-list>
+          <welcome-file>nossotemplate.xhtml</welcome-file>
+        </welcome-file-list>
+        <servlet-mapping>
+          <servlet-name>Faces Servlet</servlet-name>
+          <url-pattern>*.xhtml</url-pattern>
+        </servlet-mapping>
+        <context-param>
+          <param-name>javax.faces.FACELETS_SKIP_COMMENTS</param-name>
+          <param-value>true</param-value>
+        </context-param>
+        <context-param>
+          <param-name>javax.faces.SEPARATOR_CHAR</param-name>
+          <param-value>-</param-value>
+        </context-param>
+        <context-param>
+          <param-name>javax.faces.INTERPRET_EMPTY_STRING_SUBMITTED_VALUES_AS_NULL</param-name>
+          <param-value>true</param-value>
+        </context-param>
+        <session-config>
+          <session-timeout>20</session-timeout>
+        </session-config>
+        <filter>
+          <filter-name>LoginFilter</filter-name>
+          <filter-class>br.com.devdojo.maratonajsf.filter.LoginFilter</filter-class>
+        </filter>
+        <filter-mapping>
+          <filter-name>LoginFilter</filter-name>
+          <url-pattern>/restricted/*</url-pattern>
+        </filter-mapping>
+        <context-param>
+          <param-name>images.location</param-name>
+          <param-value>C:\var</param-value>
+        </context-param>
+        <context-param>
+          <param-name>javax.faces.STATE_SAVING_METHOD</param-name>
+          <param-value>server</param-value>
+        </context-param>
+        <context-param>
+          <param-name>com.sun.faces.enableRestoreView11Compatibility</param-name>
+          <param-value>true</param-value>
+        </context-param>
+        <context-param>
+          <param-name>javax.faces.FACELETS_LIBRARIES</param-name>
+          <param-value>/WEB-INF/devdojo-components.taglib.xml;/WEB-INF/devdojo-functions.taglib.xml</param-value>
+        </context-param>
+        <error-page>
+          <exception-type>javax.faces.application.ViewExpiredException</exception-type>
+          <location>/expirederror.xhtml</location>
+        </error-page>
+        -->
+
+
+        <!--  &lt;!&ndash;<context-param>&ndash;&gt;-->
+        <!--  &lt;!&ndash;<param-name>com.sun.faces.numberOfLogicalViews</param-name>&ndash;&gt;-->
+        <!--  &lt;!&ndash;<param-value>2</param-value>&ndash;&gt;-->
+        <!--  &lt;!&ndash;</context-param>&ndash;&gt;-->
+        <!--  &lt;!&ndash;<context-param>&ndash;&gt;-->
+        <!--  &lt;!&ndash;<param-name>com.sun.faces.numberOfViewsInSession</param-name>&ndash;&gt;-->
+        <!--  &lt;!&ndash;<param-value>4</param-value>&ndash;&gt;-->
+        <!--  &lt;!&ndash;</context-param>&ndash;&gt;-->
+        <!--  <env-entry>-->
+        <!--    <env-entry-name>jsf/ClientSideSecretKey</env-entry-name>-->
+        <!--    <env-entry-type>java.lang.String</env-entry-type>-->
+        <!--    <env-entry-value>o5bPLxyVVbW5zmV/mG1s4g==</env-entry-value>-->
+        <!--  </env-entry>-->
+        <!--  &lt;!&ndash;<context-param>&ndash;&gt;-->
+        <!--  &lt;!&ndash;<param-name>javax.faces.PARTIAL_STATE_SAVING</param-name>&ndash;&gt;-->
+        <!--  &lt;!&ndash;<param-value>false</param-value>&ndash;&gt;-->
+        <!--  &lt;!&ndash;</context-param>&ndash;&gt;-->
+        <!--  &lt;!&ndash;<error-page>&ndash;&gt;-->
+        <!--  &lt;!&ndash;&lt;!&ndash;<exception-type>org.jboss.weld.context.NonexistentConversationException</exception-type>&ndash;&gt;&ndash;&gt;-->
+        <!--  &lt;!&ndash;<location>/error.xhtml?faces-redirect=true</location>&ndash;&gt;-->
+        <!--  &lt;!&ndash;</error-page>&ndash;&gt;-->
+        <!--  </web-app>-->
+
