--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,13 @@
       <scope>provided</scope>
     </dependency>
 
+    <dependency>
+      <groupId>org.primefaces</groupId>
+      <artifactId>primefaces</artifactId>
+      <version>6.0</version>
+    </dependency>
+
+
   </dependencies>
 
   <build>
